--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.container {
+  width: 95%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 .bg-blue-200 {
   background-color: #bfdbfe;
 }
